# schedjoy_test

kbeauty/: local.env  pyproject.toml
kbeauty/archive/: archive_copy_20251110_210158.csv
kbeauty/data/: kbeauty_prod_stats.csv  kbeauty_stats.csv  kbeauty_url.csv
kbeauty/scripts/: archive_copy_20251107_194446.csv  archive_copy_20251107_200310.csv  export.py  kbeauty_upd_for_shopify.csv  scraper_kbeauty.py  to_draft.csv
kbeuaty/: local.env  pyproject.toml
kbeuaty/archive/: archive_copy_20251106_105520.csv  archive_copy_20251106_114610.csv  archive_copy_20251106_115556.csv
kbeuaty/data/: None_new_for_shopify.csv  None_upd_for_shopify.csv  kbeauty_prod_stats.csv  kbeauty_stats.csv  kbeauty_url.csv
kbeuaty/scripts/: export.py  main.sh  scraper_kbeauty.py
matt_and_max/: local.env
matt_and_max/scripts/: export.py  main.sh  scraper_matt_and_max.py
