[project]
name = "kbeauty"
version = "0.1.0"
description = ""
authors = [
    {name = "wildoctop",email = "mrwildoctopus@gmail.com"}
]
requires-python = ">=3.13"
dependencies = [
]

[tool.poetry]
packages = [{include = "scripts"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
